--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "typecheck": "bash -c tsc --noEmit"
   },
   "dependencies": {
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/modifiers": "7.0.0",
+    "@dnd-kit/sortable": "8.0.0",
     "@hookform/resolvers": "3.6.0",
     "@remix-run/css-bundle": "2.9.2",
     "@remix-run/node": "2.9.2",
@@ -28,10 +31,10 @@
     "chartjs-plugin-gradient": "0.6.1",
     "dom-css": "2.1.0",
     "filesize": "10.1.4",
-    "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-fs-backend": "2.3.2",
     "i18next-http-backend": "2.6.1",
+    "i18next": "23.11.5",
     "isbot": "4.1.0",
     "qr-scanner": "1.4.2",
     "ramda": "0.30.1",
