update: update "start" script -> load env from file .env

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prebuild": "node scripts/combineCssOfShared.js",
     "build": "remix build",
     "predev": "node scripts/combineCssOfShared.js",
-    "dev": "remix dev --manual",
+    "dev": "dotenv -e .env remix dev --manual",
     "lint": "eslint --fix --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
     "typecheck": "bash -c tsc --noEmit"
@@ -30,11 +30,12 @@
     "chartjs-plugin-datalabels": "2.2.0",
     "chartjs-plugin-gradient": "0.6.1",
     "dom-css": "2.1.0",
+    "dotenv-cli": "7.4.2",
     "filesize": "10.1.4",
+    "i18next": "23.11.5",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-fs-backend": "2.3.2",
     "i18next-http-backend": "2.6.1",
-    "i18next": "23.11.5",
     "isbot": "4.1.0",
     "qr-scanner": "1.4.2",
     "ramda": "0.30.1",
